Fix some rekenen_rationaal lessen not showing

--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -14,7 +14,7 @@ de wiskunde proberen we alles zo kort mogelijk te noteren. Zo leerde je vroeger 
 dat je de som $5 + 5 + 5$ ook kan schrijven als $3 \cdot 5$. In deze les gaan we bekijken 
 hoe we producten zoals $5 \cdot 5 \cdot 5$ korter kunnen schrijven.
 
-> Voor je aan deze les begint, fris je best eerst even de [les over vermenigvuldigen](../rekenen_gehele_getallen) op! 😉
+> Voor je aan deze les begint, fris je best eerst even de [les over vermenigvuldigen](./rekenen_gehele_getallen) op! 😉
 
 ## Wat is een grondtal en een exponent?
 De uitdrukking uit de inleiding kunnen we herschrijven als: 
@@ -58,8 +58,8 @@ $$
 Er zijn enkele 'speciale machten' die je best onthoudt:
 
 1. Als de **exponent $0$** is, dan is de uitkomst altijd **$1$**.
-2. Als de **exponent $1$** is, dan is de uitkomst altijd **het grondtal** zelf. Immers,
-   een product met $1$ factor is die factor zelf.
+2. Als de **exponent $1$** is, dan is de uitkomst altijd **het grondtal** zelf. Immers, een product met $1$ factor is die factor zelf.
+   
 </Attention>
 
 ## Machten met negatieve grondtallen
@@ -75,9 +75,9 @@ Het lijkt op het eerste zicht misschien vreemd dat $2^4$ en $(-2)^4$ dezelfde ui
 
 $$
 \begin{aligned}
-(-2)^4 &= (-2) \cdot (-2) \cdot \udotorange{(-2) \cdot (-2)} \\\\\
-(-2)^4 &= \udotgreen{(-2) \cdot (-2)} \cdot \udotorange{4} \\\\\
-(-2)^4 &= \udotgreen{4} \cdot 4 \\\\\
+(-2)^4 &= (-2) \cdot (-2) \cdot \udotorange{(-2) \cdot (-2)} \\
+(-2)^4 &= \udotgreen{(-2) \cdot (-2)} \cdot \udotorange{4} \\
+(-2)^4 &= \udotgreen{4} \cdot 4 \\
 (-2)^4 &= 16
 \end{aligned}
 $$
@@ -132,6 +132,7 @@ $$
 Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
 1. Je berekent het **resultaat zonder komma** (je denkt de komma weg)
 2. Je bepaalt het aantal cijfers na de komma door de **exponent** te **vermenigvuldigen** met het **oorspronkelijk aantal cijfers na de komma**
+
 </Attention>
 
 <Attention title="Speciale machten">
