--- a/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
@@ -3,15 +3,10 @@ title: "De basisbewerkingen van de gehele getallen"
 date: 2020-06-21T15:00:00+02:00
 weight: 1
 draft: false
-images: []
 categories: ["wiskunde", "getallen", "1e middelbaar"]
 tags: ["Optellen", "Aftrekken", "Vermenigvuldigen", "Delen", "Rekenen", "Bewerkingen"]
-description: "Deze les is een korte herhaling van de basisbewerkingen: optellen,
-aftrekken, vermenigvuldigen en delen. We bekijken aan de hand van voorbeelden nog eens
-snel hoe dit precies werkt."
-images: ['/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/optelling.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/aftrekking.png',
-'/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/vermenigvuldiging.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/deling.png',
-'/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/optelling_met_negatieve_getallen.png']
+description: "Deze les is een korte herhaling van de basisbewerkingen: optellen, aftrekken, vermenigvuldigen en delen. We bekijken aan de hand van voorbeelden nog eens snel hoe dit precies werkt."
+images: ['/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/optelling.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/aftrekking.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/vermenigvuldiging.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/deling.png', '/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/img/optelling_met_negatieve_getallen.png']
 ---
 
 Alvorens we in de rationale getallen duiken, frissen we graag nog eerst even de
@@ -612,7 +607,6 @@ Of algemener:
 
 <Attention title="Eigenschappen van de vermenigvuldiging van gehele getallen">
 
-
 * De vermenigvuldiging in $\mathbb{Z}$ is **commutatief**: $$a \cdot b = b \cdot a$$
 * De vermenigvuldiging in $\mathbb{Z}$ is **associatief**: $$(a \cdot b) \cdot c = a \cdot (b \cdot c) = a \cdot b \cdot c$$
 * $1$ is het **neutraal element** voor de vermenigvuldiging in $\mathbb{Z}$: $$a \cdot 1 = 1 \cdot a = a$$
@@ -638,4 +632,5 @@ Of algemener:
 
 * Als er een **even** aantal mintekens staat in een deling, is de uitkomst **positief**.
 * Als er een **oneven** aantal mintekens staat in een deling, is de uitkomst **negatief**.
+
 </Attention>
