Fix some more individual content files

--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -41,7 +41,7 @@ even het voorbeeld uit de inleiding <Mute text="($5 \cdot 5 \cdot 5$)"/>, waarva
 $5^3$. Hieruit kunnen we het volgende opmaken:
 
 $$
- \underbrace{5 \cdot 5 \cdot 5}_{\orange{3}\ factoren} = 5\orange{^3} = 125
+ \underbrace{5 \cdot 5 \cdot 5}_{\orange{3}~\text{factoren}} = 5\orange{^3} = 125
 $$
 
 Om $5^3$ te berekenen, vermenigvuldigen we $5$ dus $3$ keer met zichzelf, wat
@@ -50,7 +50,7 @@ $125$ geeft.
 **Algemeen** wordt dit:
 
 $$
- \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n 
+ \underbrace{a \cdot a \cdot ... \cdot a}_{n~\text{factoren}} = a^n 
 $$
 
 <Attention title="Speciale machten">
@@ -64,20 +64,20 @@ Er zijn enkele 'speciale machten' die je best onthoudt:
 
 ## Machten met negatieve grondtallen
 $$
- 2\orange{^4}= \underbrace{2 \cdot 2 \cdot 2 \cdot 2}_{\orange{4}\ factoren} = 16
+ 2\orange{^4}= \underbrace{2 \cdot 2 \cdot 2 \cdot 2}_{\orange{4}~\text{factoren}} = 16
 $$
 
 $$
- -2\orange{^4}= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)}_{\orange{4}\ factoren} = 16
+ -2\orange{^4}= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)}_{\orange{4}~\text{factoren}} = 16
 $$
 
 Het lijkt op het eerste zicht misschien vreemd dat $2^4$ en $(-2)^4$ dezelfde uitkomst hebben, maar als je dit stap voor stap uitwerkt zie je waarom 💪.
 
 $$
 \begin{aligned}
-(-2)^4 &= (-2) \cdot (-2) \cdot \udotorange{(-2) \cdot (-2)} \\
-(-2)^4 &= \udotgreen{(-2) \cdot (-2)} \cdot \udotorange{4} \\
-(-2)^4 &= \udotgreen{4} \cdot 4 \\
+(-2)^4 &= \underbrace{(-2) \cdot (-2)}_{= \orange{4}} \cdot (-2) \cdot (-2) \\
+(-2)^4 &= \orange{4} \cdot \underbrace{(-2) \cdot (-2)}_{= \blue{4}} \\ 
+(-2)^4 &= \orange{4} \cdot \blue{4} \\
 (-2)^4 &= 16
 \end{aligned}
 $$
@@ -91,12 +91,13 @@ Is het aantal **even**, dan is de uitkomst **positief**. Is het aantal **oneven*
 Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de macht**. Een macht is machtig genoeg om beide getallen te *bewerken*. 👑
 
 $$
-\left( \frac{3}{4} \right) ^2 = \frac{3^2}{4^2} = \frac{9}{16}
+\left( \frac{3}{4} \right)^2 = \frac{3^2}{4^2} = \frac{9}{16}
 $$
 
 In symbolen:
+
 $$
-\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}
+\left( \frac{a}{b} \right)^n = \frac{a^n}{b^n}
 $$
 
 Om een **macht van een kommagetal** te berekenen, passen we wederom het **trucje** toe waarbij we de komma wegdenken. 🧙‍♂️
@@ -113,7 +114,7 @@ $$
 Algemeen geldt dat een macht met grondtal $a$ en exponent $n$ gelijk is aan:
 
 $$
- \underbrace{a \cdot a \cdot ... \cdot a}_{n \text{ factoren}} = a^n 
+ \underbrace{a \cdot a \cdot ... \cdot a}_{n~\text{ factoren}} = a^n 
 $$
 
 Om te bepalen of een uitkomst positief of negatief is, tel je het *aantal mintekens*. Is het aantal **even**, dan is de uitkomst **positief**.
@@ -126,7 +127,7 @@ Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de 
 
 In symbolen:
 $$
-\left( \frac{a}{b} \right) ^n = \frac{a^n}{b^n}
+\left( \frac{a}{b} \right)^n = \frac{a^n}{b^n}
 $$
 
 Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
