--- a/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
@@ -8,14 +8,16 @@ tags: ["Breuk", "Kommagetallen", "Optellen", "Aftrekken", "Rationale getallen", 
 description: "In deze les leren we hoe we rationale getallen kunnen optellen en
 aftrekken."
 ---
-Je bent nog steeds op een verjaardagsfeestje en het [eerste stukje taart](../breuken/) ($\frac{1}{8}$) is op. 🍰 Blijkbaar is er nog een <Mute text="(even grote)"/> taart voor zij die willen. Jij en vijf anderen lusten wel nog een stukje. 😋 Deze taart wordt dus in zes gelijke delen verdeeld en jij krijgt hier één stukje van. Hoeveel taart heb je dan in het totaal gegeten? 
+Je bent nog steeds op een verjaardagsfeestje en het [eerste stukje taart](./breuken/) ($\frac{1}{8}$) is op. 🍰 Blijkbaar is er nog een <Mute text="(even grote)"/> taart voor zij die willen. Jij en vijf anderen lusten wel nog een stukje. 😋 Deze taart wordt dus in zes gelijke delen verdeeld en jij krijgt hier één stukje van. Hoeveel taart heb je dan in het totaal gegeten? 
 
 ## Hoe kan ik breuken optellen en aftrekken?
 Uit de inleiding weten we dat je $\frac{1}{8}$ en $\frac{1}{6}$ van twee even grote taarten hebt gegeten. Hoe moeten we deze breuken nu optellen om te weten hoeveel taart je in totaal hebt gegeten?
 
 Misschien moeten we gewoon tellers en noemers optellen? 🧐 Laten we proberen!
 
-$$\frac{1 + 1}{8 + 6} = \frac{\frac{2}{\orange{2}}}{\frac{14}{\orange{2}}} = \frac{1}{7}$$ 
+$$
+\frac{1 + 1}{8 + 6} = \frac{\frac{2}{\orange{2}}}{\frac{14}{\orange{2}}} = \frac{1}{7}
+$$ 
 
 Dit kàn **niet juist** zijn! Het stuk van $\frac{1}{6}$ is immers op z'n eentje al groter dan $\frac{1}{7}$. <Mute text="Een stuk van een taart dat gedeeld is in meer gelijke stukken is kleiner dan een stuk van een (even grote) taart die in minder stukken is verdeeld."/> 
 
@@ -30,7 +32,7 @@ We moeten de breuken kunnen vergelijken. Elk stuk, van beide taarten, moet even 
 ## Hoe maak ik een breuk gelijknamig?
 Als je breuken wilt optellen of aftrekken, moeten ze **altijd gelijknamig** zijn. Anders kan je deze niet optellen of aftrekken.
 
-> Als je de term *gelijknamige breuken* niet herkent, bekijk je best nog even de les over [breuken](../breuken/).
+> Als je de term *gelijknamige breuken* niet herkent, bekijk je best nog even de les over [breuken](./breuken/).
 
 Om breuken gelijknamig te maken, gebruiken we vaak het **kleinst gemeenschappelijk veelvoud** van de noemers. We mogen echter niet zomaar de noemers veranderen zonder de tellers aan te passen. **Teller en noemer** moeten immers steeds **met hetzelfde getal** vermenigvuldigd <Mute text="(of gedeeld)"/> worden. Als we de noemer dus bijvoorbeeld vermenigvuldigen met $4$, dan vermenigvuldigen we ook de teller met $4$.
 
@@ -45,7 +47,9 @@ Aangezien het soms moeilijk is om het kleinst gemeenschappelijk veelvoud te vind
 ### Nieuwe noemers voor beide breuken
 Bij de eerste stap **vermenivuldig je de noemers van beide breuken**. Het resultaat dat je bekomt wordt de nieuwe noemer voor beide breuken. Vaak komt dit overeen met het kleinst gemeenschappelijk veelvoud en anders is het niet veel extra werk. Bijvoorbeeld:
 
-$$\frac{1}{\green{8}} \text{ en } \frac{1}{\green{6}} \rightarrow \green{6} \cdot \green{8} = 48$$ 
+$$
+\frac{1}{\green{8}} \text{ en } \frac{1}{\green{6}} \rightarrow \green{6} \cdot \green{8} = 48
+$$ 
 
 $48$ wordt de **nieuwe noemer van beide breuken**.
 
@@ -81,9 +85,11 @@ Kan jij mij vertellen welke stappen ik heb genomen om onderstaande optelling gel
 ![Het gelijknamig maken van twee breuken met optionele uitleg.](img/extra_voorbeeld.png)
 
 ## Gelijknamige breuken optellen en aftrekken
-Het moeilijkste deel is achter de rug! 😌🎉 Nadat we twee gelijknamige breuken hebben, moeten we alleen nog de **tellers optellen of aftrekken** volgens de [regels die we reeds kennen](../rekenen_gehele_getallen). We kunnen nu dus eindelijk berekenen hoeveel pizza we in totaal hebben gegeten.
+Het moeilijkste deel is achter de rug! 😌🎉 Nadat we twee gelijknamige breuken hebben, moeten we alleen nog de **tellers optellen of aftrekken** volgens de [regels die we reeds kennen](./rekenen_gehele_getallen). We kunnen nu dus eindelijk berekenen hoeveel pizza we in totaal hebben gegeten.
 
-$$\frac{6}{48} + \frac{8}{48} = \frac{6 + 8}{48} = \frac{\frac{14}{\orange{2}}}{\frac{48}{\orange{2}}} = \frac{7}{24}$$ 
+$$
+\frac{6}{48} + \frac{8}{48} = \frac{6 + 8}{48} = \frac{\frac{14}{\orange{2}}}{\frac{48}{\orange{2}}} = \frac{7}{24}
+$$ 
 
 **TIP:** Soms kan het handig zijn om **de breuken eerst te vereenvoudigen** vooraleer je ze gelijknamig maakt en optelt of aftrekt. Je zet de breuk dan om naar een vorm waarbij teller en noemer geen gemeenschappelijke deler meer hebben. Dit maakt veel rekenwerk makkelijker! 💪
 
