--- a/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
@@ -236,16 +236,20 @@ Je ziet dat we niet dezelfde uitkomst hebben wanneer we de $4$ en de $20$ van pl
 
 Ook de **haakjes mag je niet zomaar van plaats veranderen** bij een aftrekking. De **aftrekking van gehele getallen is dus NIET associatief**. Bijvoorbeeld:
 
-\begin{split}
-    18 - (6 - 9) &= 18 - (-3)\\\\\
-    &= 18 + 3\\\\\
+$$
+\begin{aligned}
+    18 - (6 - 9) &= 18 - (-3)\\
+    &= 18 + 3\\
     &= 21
-\end{split}
+\end{aligned}
+$$
 
-\begin{split}
-    (18 - 6) - 9 &= 12 - 9\\\\\
+$$
+\begin{aligned}
+    (18 - 6) - 9 &= 12 - 9\\
     &= 3
-\end{split}
+\end{aligned}
+$$
 
 Je ziet dat we **niet dezelfde uitkomst** hebben wanneer we de haakjes van plaats veranderen.
 
@@ -262,11 +266,13 @@ $$
 
 Dat is niet toevallig. Je kunt een **aftrekking altijd herschrijven als een optelling**. Dat is heel handig, want daardoor krijgen we ook alle eigenschappen van een optelling. Wanneer je een aftrekking herschrijft als een optelling, kan je de **termen wél van plaats veranderen**. Dat kan niet bij een aftrekking.
 
-\begin{split}
-    20 - 110 &= 20 + (-110)\\\\\
-    &= -110 + 20 \\\\\
+$$
+\begin{aligned}
+    20 - 110 &= 20 + (-110)\\
+    &= -110 + 20 \\
     &= -90
-\end{split}
+\end{aligned}
+$$
 
 Dat maakt het soms ook eenvoudiger om uit te rekenen. Vanaf $20$ in gedachten $110$ stappen naar links zetten is moeilijker dan vanaf $-110$ in gedachten $20$ stappen naar rechts te zetten.
 
@@ -285,7 +291,7 @@ De onderdelen van een vermenigvuldiging noemen we de **factoren**. Tussen de fac
 Een vermenigvuldiging is eigenlijk een manier om een **optelling van dezelfde getallen korter** te schrijven.
 
 $$
-10 \cdot \orange{2} = \underbrace{10 + 10}\_{\orange{2}\ \text{keer}} = 20
+10 \cdot \orange{2} = \underbrace{10 + 10}_{\orange{2}\ \text{keer}} = 20
 $$
 
 Je zou $10 \cdot 2$ kunnen lezen als: "zet $10$ keer $2$ stappen naar rechts". Dan heb je in totaal $20$ stappen naar rechts gezet, dus $10 \cdot 2 = 20$.
@@ -405,45 +411,57 @@ $$
 
 De uitkomst is dus:
 
-\begin{split}
-    -3 \cdot 6 \cdot (-5) \cdot 2 &= + (3 \cdot 6 \cdot 5 \cdot 2)\\\\\
+$$
+\begin{aligned}
+    -3 \cdot 6 \cdot (-5) \cdot 2 &= + (3 \cdot 6 \cdot 5 \cdot 2)\\
     &= 180
-\end{split}
+\end{aligned}
+$$
 
 
 ### De vermenigvuldiging in $\mathbb{Z}$ is commutatief
 
 Net zoals de optelling van gehele getallen, is ook de **vermenigvuldiging van gehele getallen commutatief**. Dat betekent dat de **volgorde van de factoren niet uitmaakt**. Bijvoorbeeld:
 
-\begin{split}
-    -7 \cdot (-2) \cdot (-3) &= - (7 \cdot 2 \cdot 3)\\\\\
+$$
+\begin{aligned}
+    -7 \cdot (-2) \cdot (-3) &= - (7 \cdot 2 \cdot 3)\\
     &= -42
-\end{split}
+\end{aligned}
+$$
 
-\begin{split}
-    -2 \cdot (-3) \cdot (-7) &= - (2 \cdot 3 \cdot 7)\\\\\
+$$
+\begin{aligned}
+    -2 \cdot (-3) \cdot (-7) &= - (2 \cdot 3 \cdot 7)\\
     &= -42
-\end{split}
+\end{aligned}
+$$
 
-\begin{split}
-    -3 \cdot (-2) \cdot (-7) &= - (3 \cdot 2 \cdot 7)\\\\\
+$$
+\begin{aligned}
+    -3 \cdot (-2) \cdot (-7) &= - (3 \cdot 2 \cdot 7)\\
     &= -42
-\end{split}
+\end{aligned}
+$$
 
 
 ### De vermenigvuldiging in $\mathbb{Z}$ is associatief
 
 De vermenigvuldiging van gehele getallen is ook **associatief**. Dat betekent dat de **positie van de haakjes** niet uitmaakt. Bijvoorbeeld:
 
-\begin{split}
-    -9 \cdot (3 \cdot 5) &= -9 \cdot 15\\\\\
+$$
+\begin{aligned}
+    -9 \cdot (3 \cdot 5) &= -9 \cdot 15\\
     &= -135
-\end{split}
+\end{aligned}
+$$
 
-\begin{split}
-    (-9 \cdot 3) \cdot 5 &= -27 \cdot 5\\\\\
+$$
+\begin{aligned}
+    (-9 \cdot 3) \cdot 5 &= -27 \cdot 5\\
     &= -135
-\end{split}
+\end{aligned}
+$$
 
 ### $1$ is het neutraal element voor de vermenigvuldiging in $\mathbb{Z}$
 
@@ -479,34 +497,42 @@ $$
 
 De eerste manier om dit uit te rekenen, is door eerst gewoon uit te rekenen wat er tussen de haakjes staat. Dan maken we geen gebruik van de distributieve eigenschap.
 
-\begin{split}
+$$
+\begin{aligned}
     3 \cdot \orange{(5 + 2 + 4)} &= 3 \cdot \orange{11}\\\\
     &= 33
-\end{split}
+\end{aligned}
+$$
 
 Een tweede manier is om wél gebruik te maken van de distributieve eigenschap en de factor $3$ **uit de delen aan elke term van de optelling**. We zien dat we **dezelfde uitkomst** krijgen:
 
-\begin{split}
+$$
+\begin{aligned}
     \orange{3} \cdot (5 + 2 + 4) &= \orange{3}\cdot 5 + \orange{3}\cdot 2 + \orange{3}\cdot 4 \\\\
-    &= 15 + 6 + 12\\\\\
+    &= 15 + 6 + 12\\
     &= 33
-\end{split}
+\end{aligned}
+$$
 
 **Let wel goed op met mintekens** wanneer je de distributieve eigenschap toepast. Zorg dat de factor die je uitdeelt mooi zijn teken meeneemt en dat je ook het teken van de termen opnieuw schrijft:
 
-\begin{split}
-    \orange{-6} \cdot (-2 + 8 - 5) &= \orange{-6} \cdot (-2) + (\orange{-6}) \cdot 8 - (\orange{-6}) \cdot 5\\\\\
-    &= 12 - 48 + 30\\\\\
+$$
+\begin{aligned}
+    \orange{-6} \cdot (-2 + 8 - 5) &= \orange{-6} \cdot (-2) + (\orange{-6}) \cdot 8 - (\orange{-6}) \cdot 5\\
+    &= 12 - 48 + 30\\
     &= -6
-\end{split}
+\end{aligned}
+$$
 
 Het kan natuurlijk ook dat de factor na de haakjes staat:
 
-\begin{split}
-    (-6 + 3 + 4)\cdot \orange{4} &= -6\cdot\orange{4} + 3 \cdot\orange{4} + 4 \cdot\orange{4}\\\\\
-    &= -24 + 12 + 16\\\\\
+$$
+\begin{aligned}
+    (-6 + 3 + 4)\cdot \orange{4} &= -6\cdot\orange{4} + 3 \cdot\orange{4} + 4 \cdot\orange{4}\\
+    &= -24 + 12 + 16\\
     &= 4
-\end{split}
+\end{aligned}
+$$
 
 ## Gehele getallen delen
 
@@ -554,15 +580,19 @@ Je ziet dat we **niet dezelfde uitkomst** krijgen wanneer we het deeltal en de d
 
 Je kunt ook de **haakjes niet zomaar van plaats veranderen** bij een deling van gehele getallen. De deling van gehele getallen is dus **niet associatief**. Een voorbeeld:
 
-\begin{split}
-    -24 : (6 : 2) &= -24 : 3\\\\\
+$$
+\begin{aligned}
+    -24 : (6 : 2) &= -24 : 3\\
     &= -8
-\end{split}
+\end{aligned}
+$$
 
-\begin{split}
-    (-24 : 6) : 2 &= -4 : 2\\\\\
+$$
+\begin{aligned}
+    (-24 : 6) : 2 &= -4 : 2\\
     &= -2
-\end{split}
+\end{aligned}
+$$
 
 Je ziet dat we **niet dezelfde uitkomst** krijgen wanneer we de haakjes in de deling van plaats veranderen.
 
