Fix some more relative links in content

--- a/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
@@ -10,7 +10,7 @@ images: []
 Overal rondom ons zien we **lijnen of rechten**. Sommige snijden elkaar niet en andere wel. In deze les bekijken we de rechten door een wiskundige bril! 🤓
 
 ## Wat is een rechte?
-In de [vorige les](../basisbegrippen) hebben we reeds gezien wat een rechte is, maar om volledig te zijn herhalen we dit nog even.
+In de [vorige les](./basisbegrippen) hebben we reeds gezien wat een rechte is, maar om volledig te zijn herhalen we dit nog even.
 
 ![De rechte a is een lijn die oneindig doorloopt](img/rechte.png)
 
@@ -31,10 +31,10 @@ Het verschil tussen een evenwijdige en snijdende rechte is fundamenteel. Het is 
 
 ![Twee snijdende rechten hebben één punt gemeenschappelijk. Dit punt noemen we het snijpunt.](img/snijdende_rechten.png)
 
-Daarnaast bestaat er ook nog iets zoals **kruisende rechten**. Dit zijn rechten die elkaar **noch snijden**, **noch evenwijdig** zijn. We komen deze alleen tegen in een **driedimensionale ruimte**, dus niet in het vlak (zoals een blaadje papier). Het zijn **rechten die niet in hetzelfde vlak liggen**. We gaan hier verder op in bij de les rond [ruimtefiguren](../figuren).
+Daarnaast bestaat er ook nog iets zoals **kruisende rechten**. Dit zijn rechten die elkaar **noch snijden**, **noch evenwijdig** zijn. We komen deze alleen tegen in een **driedimensionale ruimte**, dus niet in het vlak (zoals een blaadje papier). Het zijn **rechten die niet in hetzelfde vlak liggen**. We gaan hier verder op in bij de les rond [ruimtefiguren](./figuren).
 
 ## Een rechte hoek tussen twee loodrechte dragers
-Als je de [vorige les](../basisbegrippen) goed hebt gelezen, dan weet je dat een drager de rechte is waarop een bepaald lijnstuk, halfrechte, punt... ligt.
+Als je de [vorige les](./basisbegrippen) goed hebt gelezen, dan weet je dat een drager de rechte is waarop een bepaald lijnstuk, halfrechte, punt... ligt.
 Wanneer twee dragers <Mute text="of rechten"/> **loodrecht** op elkaar liggen, betekent dit dat ze een **rechte hoek** <Mute text="(90°)"/> vormen. We noteren **$a \perp b$**. 
 
 ![Twee rechten die loodrecht op elkaar staan duiden we aan met een speciaal teken. Dit is een kleine rechte hoek in de hoek die 90° is.](img/loodrechte_stand.png)
