Use childImageSharp in lesson query directly

--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -3,17 +3,9 @@ title: "Wat is een vector?"
 date: 2019-09-18T08:04:17+02:00
 weight: 3
 draft: false
-images:
-    [
-        "/lessen/wiskunde/vector_1/intro/img/vector_is_arrow.png",
-        "/lessen/wiskunde/vector_1/intro/img/equal_vectors.png",
-        "/lessen/wiskunde/vector_1/intro/img/diff_length.png",
-        "/lessen/wiskunde/vector_1/intro/img/diff_richting.png",
-        "/lessen/wiskunde/vector_1/intro/img/diff_zin.png",
-        "/lessen/wiskunde/vector_1/intro/img/vector_props.png",
-        "/lessen/wiskunde/vector_1/intro/img/summary.png",
-    ]
-title_img: "/lessen/wiskunde/vector_1/intro/img/vector_is_arrow.png"
+image: ./img/vector_is_arrow.png
+description: "In deze les leggen we uit wat een vector is."
+tags: ["Vector"]
 ---
 
 Over cijfers en getallen heb je al heel veel gehoord in je lessen wiskunde. Je
