--- a/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
@@ -3,14 +3,9 @@ title: "Vectoriële grootheden"
 date: 2019-09-18T21:25:10+02:00
 weight: 1
 draft: false
-images:
-    [
-        "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/verplaatsingsvector_1.png",
-        "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/verplaatsingsvector_2.png",
-        "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/vec_examples.png",
-        "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/scal_examples.png",
-    ]
-title_img: "/lessen/wiskunde/vector_1/vectoriele_grootheden/img/verplaatsingsvector_1.png"
+image: ./img/verplaatsingsvector_1.png
+description: "In deze les leggen we uit wat een vectoriële grootheid is."
+tags: ["Vector", "Vectoriële grootheid"]
 ---
 
 In de [vorige les](intro) leerden we dat vectoren pijlen zijn met een
