--- a/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
@@ -3,21 +3,9 @@ title: "Vectoren grafisch optellen"
 date: 2019-09-18T08:04:17+02:00
 weight: 2
 draft: false
-images:
-    [
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/verpl_1_2.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/verpl_1_2_som.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/verpl_1234_som.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/kopstaart_1.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/kopstaart_2.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/kopstaart_multiple.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/parallellogram_1.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/parallellogram_2.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/kopstaart_commut.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/kopstaart_summary.png",
-        "/lessen/wiskunde/vector_1/grafisch_optellen/img/parallel_summary.png",
-    ]
-title_img: "/lessen/wiskunde/vector_1/grafisch_optellen/img/verpl_1_2.png"
+image: ./img/verpl_1_2.png
+description: "In deze les leggen we uit hoe je vectoren grafisch kan optellen met de kop-staartmethode of de parallellogram-methode"
+tags: ["Vector", "Vectoren optellen", "Kop-staartmethode", "parallellogram-methode"]
 ---
 
 Vectoren kun je, net als getallen, bij elkaar optellen. Maar hoe gaat dat in
