Rename title_img to image in front matters

--- a/src/content/lessen/fysica/grootheden_eenheden/_index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/_index.mdx
@@ -10,6 +10,6 @@ level: "3e middelbaar"
 course: ""
 topic: "grootheden en eenheden"
 images: []
-title_img: "/lessen/fysica/grootheden_eenheden/benaderingsregels/img/lego_meetlat.png"
+image: benaderingsregels/img/lego_meetlat.png
 ---
 
