--- a/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
@@ -9,7 +9,7 @@ level: ""
 course: ""
 topic: ""
 images: ["/lessen/fysica/grootheden_eenheden/eenheden_omzetten/img/liter_conversion.png"]
-title_img: "/lessen/fysica/grootheden_eenheden/eenheden_omzetten/img/liter_conversion.png"
+image: img/liter_conversion.png
 ---
 
 Vaak wordt er gevraagd om een eindresultaat te noteren in [SI-eenheden](intro#si-eenheden-maken-duidelijke-afspraken), terwijl de opgave niet in SI-eenheden gegeven is. Dan is het belangrijk om die eenheden te kunnen omzetten naar de SI-eenheden.
