--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -18,7 +18,7 @@ images:
         "/lessen/fysica/krachten_1/intro/img/contactkrachten.png",
         "/lessen/fysica/krachten_1/intro/img/puntmassa.png",
     ]
-title_img: "/lessen/fysica/krachten_1/intro/img/kracht_effecten.png"
+image: img/kracht_effecten.png
 ---
 
 Een van de meest fundamentele [grootheden](../grootheden_eenheden/intro) in de
