--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -12,7 +12,7 @@ images:
         "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/samenvatting_krachten_op.png",
         "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/samenvatting_in_massapunt.png",
     ]
-title_img: "/lessen/fysica/krachten_1/kracht_op_voorwerp/img/schaatsbaan_setup.png"
+image: img/schaatsbaan_setup.png
 ---
 
 Om te weten wat er nu precies met een voorwerp gaat gebeuren wanneer krachten erop
