--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -15,7 +15,7 @@ images:
         "/lessen/fysica/krachten_1/snelheidsverandering/img/Fr_blijft_loodrecht_op_v.png",
         "/lessen/fysica/krachten_1/snelheidsverandering/img/maria_wind_constante_v.png",
     ]
-title_img: "/lessen/fysica/krachten_1/snelheidsverandering/img/snelheidsvector.png"
+image: img/snelheidsvector.png
 ---
 
 Als er een [resulterende kracht](resulterende_kracht) op een voorwerp
