--- a/src/content/lessen/fysica/lichtstralen/intro/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/intro/index.mdx
@@ -16,7 +16,7 @@ images:
         "/lessen/fysica/lichtstralen/intro/img/sunburn.png",
         "/lessen/fysica/lichtstralen/intro/img/light_rays.png",
     ]
-title_img: "/lessen/fysica/lichtstralen/intro/img/mosaic.png"
+image: img/mosaic.png
 ---
 
 Zonder licht zouden we niets kunnen zien. Licht bestaat uit waanzinnig veel
