--- a/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/lichtbronnen/index.mdx
@@ -16,7 +16,7 @@ images:
         "/lessen/fysica/lichtstralen/lichtbronnen/img/soft_vs_hard_light.png",
         "/lessen/fysica/lichtstralen/lichtbronnen/img/softbox.jpg",
     ]
-title_img: "/lessen/fysica/lichtstralen/lichtbronnen/img/donkere_lichamen.png"
+image: img/donkere_lichamen.png
 ---
 
 Wanneer een voorwerp van zichzelf **licht produceert**, noemen we dat voorwerp
