--- a/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
@@ -24,7 +24,7 @@ images:
         "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/op_schaal.png",
         "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/op_schaal_enkel_groottes.png",
     ]
-title_img: "/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/img/zonsverduistering.png"
+image: img/zonsverduistering.png
 ---
 
 Een zonsverduistering is een mooi voorbeeld van de
