--- a/src/content/lessen/fysica/lichtstralen/voortplanting/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/voortplanting/index.mdx
@@ -15,7 +15,7 @@ images:
         "/lessen/fysica/lichtstralen/voortplanting/img/met_bril.png",
         "/lessen/fysica/lichtstralen/voortplanting/img/niet_homogeen.png",
     ]
-title_img: "/lessen/fysica/lichtstralen/voortplanting/img/rechtlijnige_voortplanting.png"
+image: img/rechtlijnige_voortplanting.png
 ---
 
 Wanneer lichtstralen onze ogen binnenvliegen en tegen ons netvlies botsen,
