--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -16,7 +16,7 @@ images:
         "/lessen/wiskunde/1g_vgl/functies/img/conveyor_nulpunt_1.png",
         "/lessen/wiskunde/1g_vgl/functies/plt/nulpunt.png",
     ]
-title_img: "/lessen/wiskunde/1g_vgl/functies/plt/snijpunt.png"
+image: plt/snijpunt.png
 ---
 
 [Vergelijkingen](intro) en [functies](../functies/intro) zijn zeer nauw
