--- a/src/content/lessen/wiskunde/afgeleiden_1/_index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/_index.mdx
@@ -8,5 +8,5 @@ level: "5e middelbaar"
 course: "wiskunde"
 topic: "analyse"
 images: []
-title_img: "/lessen/wiskunde/afgeleiden_1/differentiequotient/img/drag_racing.png"
+image: differentiequotient/img/drag_racing.png
 ---
