--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -10,7 +10,7 @@ berekenen. De afgeleide van een functie is een functievoorschrift waarmee we de
 afgeleide voor alle mogelijke x-waarden van de functie kunnen vinden. We leggen
 dit uit aan de hand van de afgeleide van een
 tweedegraadsfunctie."
-title_img: "/lessen/wiskunde/afgeleiden_1/afgeleide_functie/img/zonder_met_afgeleide_fx.png"
+image: img/zonder_met_afgeleide_fx.png
 ---
 
 In de vorige les zagen we hoe je de [afgeleide voor een bepaalde
