--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -10,7 +10,7 @@ images: ['/lessen/wiskunde/afgeleiden_1/afleidbaarheid/img/afleidbaarheid_discon
 description: "Een functie is niet altijd in ieder punt afleidbaar. In deze les
 leren we wat de voorwaarden zijn waar een functie aan moet voldoen opdat de
 functie afleidbaar zou zijn in een bepaald punt x = a."
-title_img: "/lessen/wiskunde/afgeleiden_1/afleidbaarheid/img/afleidbaarheid_discontinu.png"
+image: img/afleidbaarheid_discontinu.png
 ---
 
 We hebben al geleerd hoe we de ogenblikkelijke verandering, of de afgeleide, in
