--- a/src/content/lessen/wiskunde/afgeleiden_1/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/grafiek/index.mdx
@@ -9,7 +9,7 @@ images: ['/lessen/wiskunde/afgeleiden_1/grafiek/img/grafiek_ricos.png']
 description: "De afgeleide van een functie is zelf ook een functie en heeft dus
 een grafiek. In deze les leren we hoe je het verband kan zien tussen de grafiek
 van de afgeleide van een functie en de grafiek van de functie zelf."
-title_img: "/lessen/wiskunde/afgeleiden_1/grafiek/img/grafiek_ricos.png"
+image: img/grafiek_ricos.png
 ---
 
 In de [les over de afgeleide functie](afgeleide_functie) leerden we hoe we
