--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -11,7 +11,7 @@ Meer bepaald is de afgeleide in een punt a de rico van de raaklijn aan de
 grafiek van de functie in a. Dat is een hele mond vol. Maar gelukkig bouwen we
 in deze les stap per stap en met behulp van veel illustraties op naar deze
 interpretatie van een afgeleide."
-title_img: "/lessen/wiskunde/afgeleiden_1/rico_raaklijn/img/rico_op_grafiek.png"
+image: img/rico_op_grafiek.png
 ---
 
 We hebben al geleerd hoe we de ogenblikkelijke verandering, of de _afgeleide_,
