--- a/src/content/lessen/wiskunde/eentermen/_index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/_index.mdx
@@ -8,6 +8,6 @@ level: "2e middelbaar"
 course: "wiskunde"
 topic: "algebra"
 images: []
-title_img: "/lessen/wiskunde/eentermen/variabelen/img/living_no_dims.png"
+image: variabelen/img/living_no_dims.png
 ---
 
