--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -14,7 +14,7 @@ images:
         "/lessen/wiskunde/functies/domein_beeld/plt/dom.png",
         "/lessen/wiskunde/functies/domein_beeld/plt/bld.png",
     ]
-title_img: "/lessen/wiskunde/functies/domein_beeld/plt/fx.png"
+image: plt/fx.png
 ---
 
 We kunnen niet altijd eender welk getal als $x$ kiezen om in ons
