--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -9,7 +9,7 @@ level: "3M"
 course: "wiskunde"
 topic: "analyse"
 images: ["/lessen/wiskunde/functies/nulpunten/plt/nulpunten.png"]
-title_img: "/lessen/wiskunde/functies/nulpunten/plt/nulpunten.png"
+image: plt/nulpunten.png
 ---
 
 In veel toepassingen van functies zijn we geïnteresseerd in de waarde die we
