--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -9,7 +9,7 @@ level: "3M"
 course: "wiskunde"
 topic: "analyse"
 images: ["/lessen/wiskunde/functies/tekenschema/plt/tekenschema.png"]
-title_img: "/lessen/wiskunde/functies/tekenschema/plt/tekenschema.png"
+image: plt/tekenschema.png
 ---
 
 Naast het kennen van [de nulpunten](nulpunten) van een functie, is het ook
