--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -9,7 +9,7 @@ level: 3M
 course: wiskunde
 topic: analyse
 images: ["/lessen/wiskunde/functies/voorschrift/img/conveyor_functiewaarde.png"]
-title_img: "/lessen/wiskunde/functies/voorschrift/img/conveyor_functiewaarde.png"
+image: img/conveyor_functiewaarde.png
 ---
 
 Een [functie](intro) is een verband tussen een $\orange{x}$ en een
