--- a/src/content/lessen/fysica/krachten_1/_index.mdx
+++ b/src/content/lessen/fysica/krachten_1/_index.mdx
@@ -10,6 +10,6 @@ course: "fysica"
 topic: "dynamica"
 section_color: "#19a974"
 images: []
-title_img: "/lessen/fysica/krachten_1/intro/img/kracht_effecten.png"
+image: intro/img/kracht_effecten.png
 ---
 
