--- a/src/content/lessen/fysica/lichtstralen/_index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/_index.mdx
@@ -10,5 +10,5 @@ level: "3e middelbaar"
 course: ""
 topic: "optica"
 images: []
-title_img: "/lessen/fysica/lichtstralen/intro/img/mosaic.png"
+image: intro/img/mosaic.png
 ---
