--- a/src/content/lessen/wiskunde/functies/_index.mdx
+++ b/src/content/lessen/wiskunde/functies/_index.mdx
@@ -5,5 +5,5 @@ weight: 4
 level: "3e middelbaar"
 topic: "analyse"
 images: []
-title_img: "/lessen/wiskunde/functies/domein_beeld/plt/fx.png"
+image: domein_beeld/plt/fx.png
 ---
